@@ -45,8 +45,8 @@ Valid interfaces are:
 EOD;
 
 	foreach ($iflist as $iface => $ifa) {
-		echo sprintf("% -8s%s%s\n", $iface, $ifa['mac'],
-			$ifa['up'] ? "   (up)" : "");
+		echo sprintf("% -8s%s% 7s   %s\n", $iface, $ifa['mac'],
+			$ifa['up'] ? "(up)" : "", $ifa['drvname']);
 	}
 	
 	echo <<<EOD
